	- [roms]  $2600: clear _all_ bkpts in ti68k_bkpt_clear_all
	- [roms]  $2601: added support for breakpoints on bit changes
	- [roms]  $2602: data/bit change breakpoint is raised after instruction execution so fixed disassembly window 
		to show one line before current PC.
	- [roms]  $2603: fixed wrong disassembly offset of MOVEM.W instruction

- 16/03/2007, version 3.00
	- [kevin] $2389: don't use \n in the breakpoint window status bar
	- [kevin] $2390: fixed default hardware version for Voyage 200
	- [roms]  $2409: added KDE desktop files & associations
	- [roms]  $2415: allow to load saved states by DnD
	- [roms]  $2417: allow to directly load ROM/TIB/SAV files from command line; maintained compatibility with older switches
	- [roms]  $2420: fixed bug introduced in $2417
	- [roms]  $2421: fixed double-free when DnD files to send
	- [kevin] $2422: fixed errors (wrong case) in ROM_CALL list and added 2 new entries from TIGCC
	- [kevin] $2424: don't disassemble instructions invalid for the 68000
	- [kevin] $2425: fixed handling of 4-byte F-Line jumps
	- [roms]  $2431: added memory map menu to the memory window
	- [roms]  $2434: added key press recording/playing
	- [roms]  $2440: fixed bug in the Infos box: display skin version according to SkinInfos structure
	- [kevin] $2451: fixed aliasing violations in Win32 file dialog code
	- [kevin] $2456: detect *-apple-darwin* as OS X, not just powerpc-apple-darwin*
	- [kevin] $2457: fixed --disable-gdb builds failing due to missing intl/Makefile
	- [kevin] $2459: fixed Win32 file dialogs not setting fname to NULL when returning NULL
	- [kevin] $2462: filter -s from CFLAGS/CXXFLAGS/LDFLAGS on Darwin
	- [kevin] $2485: OLE Automation: set ret to NULL if IUnknown::QueryInterface fails
		=> released on 14/05/2007

- 09/02/2007, version 2.81e
	- [kevin] $2348: delete the temporary file instead of erroring if the user cancels the receive file dialog
	- [kevin] $2349: fixed progress bar refresh referencing freed memory (#1529247)